WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185318
[iOS] Apps that are not visible may not get suspended if they trigger page loads while in the background
https://bugs.webkit.org/show_bug.cgi?id=185318
Summary
[iOS] Apps that are not visible may not get suspended if they trigger page lo...
Chris Dumez
Reported
2018-05-04 12:55:10 PDT
Apps that are not visible may not get suspended if they trigger a page loads.
Attachments
Patch
(3.54 KB, patch)
2018-05-04 13:00 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.56 KB, patch)
2018-05-04 13:01 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(4.40 KB, patch)
2018-05-10 13:02 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-05-04 13:00:27 PDT
Created
attachment 339584
[details]
Patch
Chris Dumez
Comment 2
2018-05-04 13:01:32 PDT
Created
attachment 339585
[details]
Patch
Geoffrey Garen
Comment 3
2018-05-04 13:35:43 PDT
Comment on
attachment 339585
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-05-04 13:48:29 PDT
Comment on
attachment 339585
[details]
Patch Clearing flags on attachment: 339585 Committed
r231376
: <
https://trac.webkit.org/changeset/231376
>
WebKit Commit Bot
Comment 5
2018-05-04 13:48:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-05-04 13:49:19 PDT
<
rdar://problem/39987839
>
Ryan Haddad
Comment 7
2018-05-08 11:06:46 PDT
This change seems to have caused API test failures and timeouts on iOS Simulator:
https://build.webkit.org/builders/Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/4803
I cannot repro with a build of
r231375
, but I can with a build of
r231376
.
Ryan Haddad
Comment 8
2018-05-08 11:24:34 PDT
I attempted to roll this out, but
https://trac.webkit.org/changeset/231458/webkit
conflicts.
Chris Dumez
Comment 9
2018-05-08 11:53:16 PDT
(In reply to Ryan Haddad from
comment #8
)
> I attempted to roll this out, but >
https://trac.webkit.org/changeset/231458/webkit
conflicts.
Arg. Ok, Will investigate now then.
Chris Dumez
Comment 10
2018-05-08 11:58:30 PDT
Committed
r231498
: <
https://trac.webkit.org/changeset/231498
>
Chris Dumez
Comment 11
2018-05-08 11:59:05 PDT
Rolled out in <
https://trac.webkit.org/changeset/231498
>.
Chris Dumez
Comment 12
2018-05-10 13:02:49 PDT
Created
attachment 340119
[details]
Patch
Geoffrey Garen
Comment 13
2018-05-10 14:38:11 PDT
Comment on
attachment 340119
[details]
Patch r=me
WebKit Commit Bot
Comment 14
2018-05-10 15:02:37 PDT
Comment on
attachment 340119
[details]
Patch Clearing flags on attachment: 340119 Committed
r231663
: <
https://trac.webkit.org/changeset/231663
>
WebKit Commit Bot
Comment 15
2018-05-10 15:02:39 PDT
All reviewed patches have been landed. Closing bug.
Alex Christensen
Comment 16
2018-10-09 16:37:48 PDT
I'm reverting this in
https://bugs.webkit.org/show_bug.cgi?id=190417
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug