Cherry-pick r231663. rdar://problem/39987839

[iOS] Apps that are not visible may not get suspended if they trigger page loads while in the background
    https://bugs.webkit.org/show_bug.cgi?id=185318

    Reviewed by Geoffrey Garen.

    Whenever there is a page load going on, we take a background process assertion to delay process
    suspension until this load completes. However, there is also a 3 seconds grace period after
    a load is complete to allow the app to trigger a new load shortly after. This grace period was
    introduced to support use cases where a visible app does loads in an offscreen view. However,
    it can be abused by apps running in the background as they could trigger new page loads while
    in the background to delay process suspension. This patch tightens the policy so that only
    apps that are currently visible get to use this grace period. Apps that are in the background
    get to finish their current load and will then get suspended.

    * UIProcess/Cocoa/NavigationState.mm:
    (WebKit::NavigationState::didChangeIsLoading):

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231663 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/200942.21@safari-606.1.17.20-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606.1.17-branch@231791 268f45cc-cd09-0410-ab3c-d52691b4dbfc